Kexi: Fix state of 'modification' flag while switching from SQL view to Query Data view and back

Summary:
A general change in the logic of the Query Designer is that now we remember the view mode that was in use while the modification to design happened, not just the fact that the modification happened previously (since the last saving changes).

BUG:278379

Also fixes this:
Changes in query design not retained after changes in SQL view and switching to Data view
BUG:358413

FIXED-IN:2.9.11

Test Plan: Follow the scenarios of the both bugs for any simple query such as "SELECT * FROM T ORDER BY F".

Reviewers: piggz, wicik

Projects: #kexi, #calligra:_3.0

Differential Revision: https://phabricator.kde.org/D856