kexi/plugins/queries/kexiquerydesignerguieditor.cpp
@@ -1,6 +1,6 @@
 /* This file is part of the KDE project
    Copyright (C) 2004 Lucijan Busch <lucijan@kde.org>
-   Copyright (C) 2004-2015 Jarosław Staniek <staniek@kde.org>
+   Copyright (C) 2004-2016 Jarosław Staniek <staniek@kde.org>
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -602,7 +602,7 @@ KexiQueryDesignerGuiEditor::beforeSwitchTo(Kexi::ViewMode mode, bool &dontStore)
     if (!d->dataTable->dataAwareObject()->acceptRowEdit())
         return cancelled;
 
-    kDebug() << "queryChangedInPreviousView:" << tempData()->queryChangedInPreviousView();
+    kDebug() << "queryChangedInView:" << tempData()->queryChangedInView();
 
     if (mode == Kexi::DesignViewMode) {
         return true;
@@ -612,7 +612,7 @@ KexiQueryDesignerGuiEditor::beforeSwitchTo(Kexi::ViewMode mode, bool &dontStore)
             KMessageBox::information(this, msgCannotSwitch_EmptyDesign());
             return cancelled;
         }
-        if (tempData()->queryChangedInPreviousView() || !tempData()->query()) {
+        if (tempData()->queryChangedInView() != Kexi::NoViewMode || !tempData()->query()) {
             //remember current design in a temporary structure
             QString errMsg;
             //build schema; problems are not allowed
@@ -626,7 +626,7 @@ KexiQueryDesignerGuiEditor::beforeSwitchTo(Kexi::ViewMode mode, bool &dontStore)
         return true;
     } else if (mode == Kexi::TextViewMode) {
         dontStore = true;
-        if (tempData()->queryChangedInPreviousView() || !tempData()->query()) {
+        if (tempData()->queryChangedInView() != Kexi::NoViewMode || !tempData()->query()) {
             //remember current design in a temporary structure
             //build schema; ignore problems
             buildSchema();
@@ -676,8 +676,8 @@ KexiQueryDesignerGuiEditor::afterSwitchFrom(Kexi::ViewMode mode)
     } else if (mode == Kexi::TextViewMode || mode == Kexi::DataViewMode) {
         // Switch from text or data view. In the second case, the design could be changed as well
         // because there could be changes made in the text view before switching to the data view.
-        if (tempData()->queryChangedInPreviousView()) {
-            //previous view changed query data
+        if (tempData()->queryChangedInView() == Kexi::TextViewMode) {
+            //SQL view changed the query design
             //-clear and regenerate GUI items
             initTableRows();
             //! @todo
@@ -711,7 +711,7 @@ KexiQueryDesignerGuiEditor::afterSwitchFrom(Kexi::ViewMode mode)
         d->dataTable->tableView()->adjustColumnWidthToContents(COLUMN_ID_COLUMN);
         d->dataTable->tableView()->adjustColumnWidthToContents(COLUMN_ID_TABLE);
     }
-    tempData()->setQueryChangedInPreviousView(false);
+    tempData()->setQueryChangedInView(false);
     setFocus(); //to allow shared actions proper update
     return true;
 }
@@ -729,7 +729,7 @@ KexiQueryDesignerGuiEditor::storeNewData(const KexiDB::SchemaData& sdata,
     }
     QString errMsg;
     KexiQueryPart::TempData * temp = tempData();
-    if (!temp->query() || !(viewMode() == Kexi::DesignViewMode && !temp->queryChangedInPreviousView())) {
+    if (!temp->query() || !(viewMode() == Kexi::DesignViewMode && temp->queryChangedInView() == Kexi::NoViewMode)) {
         //only rebuild schema if it has not been rebuilt previously
         if (!buildSchema(&errMsg)) {
             KMessageBox::sorry(this, errMsg);
@@ -1254,7 +1254,7 @@ void KexiQueryDesignerGuiEditor::slotRowInserted(KexiDB::RecordData* record, uin
         propertySetSwitched();
         d->droppedNewRecord = 0;
     }
-    tempData()->setQueryChangedInPreviousView(true);
+    tempData()->setQueryChangedInView(true);
 }
 
 void KexiQueryDesignerGuiEditor::slotTableAdded(KexiDB::TableSchema & /*t*/)
@@ -1263,7 +1263,7 @@ void KexiQueryDesignerGuiEditor::slotTableAdded(KexiDB::TableSchema & /*t*/)
         return;
     updateColumnsData();
     setDirty();
-    tempData()->setQueryChangedInPreviousView(true);
+    tempData()->setQueryChangedInView(true);
     d->dataTable->setFocus();
 }
 
@@ -1271,7 +1271,7 @@ void KexiQueryDesignerGuiEditor::slotTableHidden(KexiDB::TableSchema & /*t*/)
 {
     updateColumnsData();
     setDirty();
-    tempData()->setQueryChangedInPreviousView(true);
+    tempData()->setQueryChangedInView(true);
 }
 
 QByteArray KexiQueryDesignerGuiEditor::generateUniqueAlias() const
@@ -1624,7 +1624,7 @@ void KexiQueryDesignerGuiEditor::slotBeforeTotalsCellChanged(KexiDB::RecordData 
 #else
     //! @todo unused yet
     setDirty(true);
-    tempData()->setQueryChangedInPreviousView(true);
+    tempData()->setQueryChangedInView(true);
 #endif
 }
 
@@ -1703,7 +1703,7 @@ void KexiQueryDesignerGuiEditor::slotBeforeCriteriaCellChanged(KexiDB::RecordDat
             (*set)["criteria"] = QVariant(); //clear it
         }
         setDirty(true);
-        tempData()->setQueryChangedInPreviousView(true);
+        tempData()->setQueryChangedInView(true);
     }
     else {
         result->success = false;
@@ -1716,13 +1716,13 @@ void KexiQueryDesignerGuiEditor::slotBeforeCriteriaCellChanged(KexiDB::RecordDat
 void KexiQueryDesignerGuiEditor::slotTablePositionChanged(KexiRelationsTableContainer*)
 {
     setDirty(true);
-    // this is not needed here because only position has changed: tempData()->setQueryChangedInPreviousView(true);
+    // this is not needed here because only position has changed: tempData()->setQueryChangedInView(true);
 }
 
 void KexiQueryDesignerGuiEditor::slotAboutConnectionRemove(KexiRelationsConnection*)
 {
     setDirty(true);
-    tempData()->setQueryChangedInPreviousView(true);
+    tempData()->setQueryChangedInView(true);
 }
 
 void KexiQueryDesignerGuiEditor::slotAppendFields(
@@ -1853,7 +1853,7 @@ void KexiQueryDesignerGuiEditor::slotPropertyChanged(KoProperty::Set& set, KoPro
             }
         }
     }
-    tempData()->setQueryChangedInPreviousView(true);
+    tempData()->setQueryChangedInView(true);
 }
 
 void KexiQueryDesignerGuiEditor::slotNewItemStored(KexiPart::Item& item)
