kexi/plugins/queries/kexiquerydesignersql.cpp
@@ -1,6 +1,6 @@
 /* This file is part of the KDE project
    Copyright (C) 2003 Lucijan Busch <lucijan@kde.org>
-   Copyright (C) 2004-2014 Jarosław Staniek <staniek@kde.org>
+   Copyright (C) 2004-2016 Jarosław Staniek <staniek@kde.org>
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public
@@ -17,6 +17,11 @@
    the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
  * Boston, MA 02110-1301, USA.
 */
+
+#include "kexiquerydesignersql.h"
+#include "kexiquerydesignersqleditor.h"
+#include "kexiquerypart.h"
+#include "kexisectionheader.h"
 
 #include <QSplitter>
 #include <QLayout>
@@ -40,13 +45,6 @@
 #include <kexiproject.h>
 #include <KexiMainWindowIface.h>
 #include <KexiWindow.h>
-
-#include "kexiquerydesignersqleditor.h"
-#include "kexiquerydesignersql.h"
-#include "kexiquerypart.h"
-
-#include "kexisectionheader.h"
-
 
 static bool compareSQL(const QString& sql1, const QString& sql2)
 {
@@ -211,7 +209,7 @@ tristate KexiQueryDesignerSQLView::beforeSwitchTo(Kexi::ViewMode mode, bool &don
         if (sqlTextIsEmpty && mode == Kexi::DesignViewMode) {
             //special case: empty SQL text, allow to switch to the design view
             if (temp->query()) {
-                temp->setQueryChangedInPreviousView(true); //query changed
+                temp->setQueryChangedInView(true); //query changed
                 temp->setQuery(0);
             }
         }
@@ -224,7 +222,7 @@ tristate KexiQueryDesignerSQLView::beforeSwitchTo(Kexi::ViewMode mode, bool &don
                     && compareSQL(d->origStatement, d->editor->text()))
             {
                 //statement unchanged! - nothing to do
-                temp->setQueryChangedInPreviousView(false);
+                temp->setQueryChangedInView(false);
             } else {
                 //yes: parse SQL text
                 if (sqlTextIsEmpty || !slotCheckQuery()) {
@@ -235,7 +233,7 @@ tristate KexiQueryDesignerSQLView::beforeSwitchTo(Kexi::ViewMode mode, bool &don
                         return cancelled;
                     }
                     //do not change original query - it's invalid
-                    temp->setQueryChangedInPreviousView(false);
+                    temp->setQueryChangedInView(false);
                     //this view is no longer _just_ switched from "NoViewMode"
                     d->justSwitchedFromNoViewMode = false;
                     return true;
@@ -245,7 +243,7 @@ tristate KexiQueryDesignerSQLView::beforeSwitchTo(Kexi::ViewMode mode, bool &don
                 //replace old query schema with new one
                 temp->setQuery(d->parsedQuery);   //this will also delete temp->query()
                 d->parsedQuery = 0;
-                temp->setQueryChangedInPreviousView(true);
+                temp->setQueryChangedInView(true);
             }
         }
         d->origStatement = d->editor->text();
@@ -279,7 +277,7 @@ KexiQueryDesignerSQLView::afterSwitchFrom(Kexi::ViewMode mode)
     if (query) {
         // Use query with Kexi keywords (but not driver-specific keywords) escaped.
         temp->setQuery(query);
-        if (temp->queryChangedInPreviousView()) {
+        if (temp->queryChangedInView() != Kexi::NoViewMode) {
             KexiDB::Connection::SelectStatementOptions options;
             options.identifierEscaping = KexiDB::Driver::EscapeKexi;
             options.addVisibleLookupColumns = false;
@@ -293,10 +291,19 @@ KexiQueryDesignerSQLView::afterSwitchFrom(Kexi::ViewMode mode)
             return false;
     }
 
-    if (!compareSQL(d->origStatement, d->editor->text())) {
-        d->slotTextChangedEnabled = false;
-        d->editor->setText(d->origStatement);
-        d->slotTextChangedEnabled = true;
+    if (temp->queryChangedInView() == Kexi::DesignViewMode /* true in this scenario:
+                                                      - user switched from SQL to Design,
+                                                      - changed the design,
+                                                      - switched to Data
+                                                      - switched back to SQL */
+        || mode != Kexi::DataViewMode) /* true in this scenario: user switched from No-view
+                                          or Design view */
+    {
+        if (!compareSQL(d->origStatement, d->editor->text())) {
+            d->slotTextChangedEnabled = false;
+            d->editor->setText(d->origStatement);
+            d->slotTextChangedEnabled = true;
+        }
     }
     QTimer::singleShot(100, d->editor, SLOT(setFocus()));
     return true;
